# warcraft-hotkey-editor

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DISCLAIMER.md  Dockerfile  README.md  docker-compose.yml  flake.nix  moon.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
crates/hotkey-editor/: Cargo.toml  Dioxus.toml  Dockerfile  moon.yml  nginx.conf  package.json  playwright.config.ts  tailwind.input.css  tsconfig.json
crates/hotkey-editor/assets/: keyboard-navigation.js  tailwind.css  tooltip-touch.js
crates/hotkey-editor/e2e/: global-setup.ts  run.mjs  server.mjs  tsconfig.json
crates/hotkey-editor/e2e/tests/: balance-overlay-regression.spec.ts  collision-count-progression.spec.ts  destroyer-regression.spec.ts  drag-drop.spec.ts  export.spec.ts  gargoyle-prioritize-regression.spec.ts  hotkey-edit.spec.ts  import.spec.ts  layout-editor.spec.ts  mode-tabs.spec.ts  navigation.spec.ts  offstate-regression.spec.ts  persistence.spec.ts  preview.spec.ts  race-tabs.spec.ts  search-cross-race.spec.ts  search.spec.ts  smoke.spec.ts  sorting.spec.ts  template.spec.ts  unit-grid.spec.ts  view-switcher.spec.ts
crates/hotkey-editor/scripts/: keyboard-navigation.ts  tooltip-touch.ts
crates/hotkey-editor/src/: ability_cell.rs  app.rs  grid_layout.rs  grid_slot.rs  grid_templates.rs  icons.rs  inspector_detail.rs  main.rs
crates/hotkey-editor/src/components/: app_footer.rs  app_header.rs  command_grid.rs  dialog_header.rs  dialog_stack.rs  download_info_dialog.rs  export_buttons.rs  icons.rs  key_picker.rs  layout_editor.rs  mod.rs  mode_and_race_tabs.rs  preview_dialog.rs  race_tabs.rs  system_hotkeys_button.rs  templates_dialog.rs  tile_override.rs  unit_detail.rs  unit_list.rs  upload_button.rs  upload_info_dialog.rs
crates/hotkey-editor/src/customkeys/: baseline.rs  blob_download.rs  default_config.rs  explicit_export.rs  hotkey_override.rs  local_storage_cache.rs  mod.rs  positions.rs  upload_overlay.rs  upload_picker.rs  upload_status.rs
crates/hotkey-editor/src/domain/: ability_cell.rs  building_traits.rs  command_catalog.rs  cursor_hit.rs  default_config.rs  grid_layout.rs  grid_slot.rs  grid_templates.rs  hotkey_override.rs  hotkey_token.rs  inspector_detail.rs  mod.rs  object_lookup.rs  positions.rs  races.rs  unit_catalog.rs  unit_kind.rs  unit_mode.rs  unit_slots.rs
crates/hotkey-editor/src/focus/: mod.rs  modality.rs  navigation.rs
crates/hotkey-editor/src/model/: icons.rs  mod.rs
crates/hotkey-editor/src/navigation/: url_state.rs
crates/hotkey-editor/src/services/: mod.rs
crates/hotkey-editor/src/system_hotkeys/: binding_map.rs  category.rs  keycodes.rs  mod.rs  scope.rs
crates/hotkey-editor/src/text/: color_codes.rs  command_label.rs  description.rs  inner_spaces.rs  level_markers.rs  mod.rs  substitution_placeholders.rs  tip.rs
crates/hotkey-editor/styles/: app-root.css  command-grid.css  components-app-header.css  components-tile-override.css  components-unit-list.css  dialog-shared.css  drag-follower.css  key-picker.css  layout-editor.css  matchups.css  mobile-foundation.css  mode-tabs.css  override-panel.css  preflight.css  preview.css  primitives.css  race-tabs.css  stats-panel.css  system-hotkeys.css  templates.css  toasts.css  unit-detail.css  unit-list.css
crates/hotkey-editor/templates/: CustomKeys.txt  CustomKeys_Neo_AZERTY.txt  CustomKeys_Neo_QWERTY.txt  CustomKeys_Neo_QWERTZ.txt
crates/warcraft-cli/: Cargo.toml  moon.yml
crates/warcraft-cli/src/: main.rs
crates/warcraft-extractor/: Cargo.toml  README.md  moon.yml
crates/warcraft-extractor/examples/: dump_casc.rs  find_files.rs  inspect_abilityfunc.rs  inspect_slk.rs
crates/warcraft-extractor/src/: abilities.rs  ability_defaults.rs  command_defaults.rs  data_tables.rs  db.rs  default_positions.rs  game.rs  gameplay_constants.rs  heroes.rs  image.rs  items.rs  lib.rs  main.rs  object_texts.rs  system_keybinds.rs  unit_abilities.rs  unit_data.rs  unit_ui_flags.rs  units.rs
crates/warcraft-extractor/src/skins/: ability.rs  item.rs  mod.rs  unit.rs
crates/warcraft-extractor/src/strings/: mod.rs
crates/warcraft-extractor/src/upgrades/: human.rs  mod.rs  nightelf.rs  orc.rs  undead.rs
crates/warcraft-extractor/tests/: rules.rs
crates/warcraft-keybinds/: Cargo.toml  moon.yml
crates/warcraft-keybinds/fixtures/: resolved_default_customkeys.txt
crates/warcraft-keybinds/src/: ability_cell.rs  builder.rs  building.rs  cascade.rs  cascade_planner.rs  cascade_queue.rs  catalog.rs  conflict_graph.rs  cross_unit_collision.rs  custom_keys.rs  customkeys.rs  export.rs  file.rs  global_cascade.rs  grid_layout.rs  hotkey_target.rs  inspector_detail.rs  lib.rs  lookup.rs  model.rs  move_request.rs  overlay.rs  parser.rs  slot.rs  unit_collision_report.rs  unit_grids.rs  unit_keyed_custom_keys.rs  unit_slots.rs
crates/warcraft-keybinds/src/cascade/: conflict_graph.rs  mod.rs  (+2 more)
crates/warcraft-keybinds/templates/: CustomKeys.txt
(+237 files in other folders)
