[workspace]
resolver = "2"
members = [
    "crates/hotkey-editor",
    "crates/warcraft-api",
    "crates/warcraft-cli",
    "crates/warcraft-database",
    "crates/warcraft-extractor",
    "crates/warcraft-keybinds",
    "crates/warcraft-slk",
]
# Default workspace members compile on `wasm32-unknown-unknown` for the web app.
# `warcraft-extractor`, `warcraft-slk`, and `warcraft-cli` are native-only tools
# kept out of default workspace operations (`cargo build`, `cargo clippy --all-targets`).
# Run the CLI:
#   cargo run -p warcraft-cli -- unit Hpal
#   cargo run -p warcraft-cli -- --help
#   cargo run -p warcraft-extractor -- --casc <PATH>
#   cargo test -p warcraft-extractor
default-members = [
    "crates/hotkey-editor",
    "crates/warcraft-api",
    "crates/warcraft-database",
    "crates/warcraft-keybinds",
]

[workspace.package]
authors = ["clemenscodes"]
edition = "2024"
license = "AGPL-3.0-only"
version = "0.1.0"

[workspace.dependencies]
dioxus = { version = "=0.7.9" }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
num-traits = "0.2"
thiserror = "2.0.18"

bcdec_rs = "0.2.0"
casclib = { git = "https://github.com/clemenscodes/casclib-rs.git" }
clap = { version = "4.6.1", features = ["derive", "env"] }
ddsfile = "0.6.0"
image = "0.25.10"
paste = "1.0.15"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[profile.release]
codegen-units = 16
opt-level = 3
lto = false
panic = 'unwind'
strip = "symbols"
