[package]
name = "hotkey-editor"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Web-based Warcraft III CustomKeys.txt editor."

[[bin]]
name = "hotkey-editor"
path = "src/main.rs"

[dependencies]
dioxus = { workspace = true, features = ["web", "router", "launch", "macro"] }
dioxus-primitives = { workspace = true }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "AddEventListenerOptions", "Event",
    "HtmlInputElement", "HtmlElement", "HtmlAnchorElement",
    "Element", "Node", "NodeList",
    "KeyboardEvent", "PointerEvent", "MouseEvent",
    "DomRect", "Document", "EventTarget", "DomTokenList",
    "Window", "Blob", "BlobPropertyBag", "Url",
    "Storage",
] }
js-sys = "0.3"
num-traits.workspace = true
warcraft-api = { path = "../warcraft-api" }
warcraft-database = { path = "../warcraft-database" }
warcraft-keybinds = { path = "../warcraft-keybinds" }
